--- a/views/five_four.erb
+++ b/views/five_four.erb
@@ -5,14 +5,14 @@
   <title>Dice Roll</title>
 </head>
 <body>
- <navbar>
- <a href="/">Home</a>
-  <a href=/dice/2/6>2d6</a>
-  <a href=/dice/2/10>2d10</a>
-  <a href=/dice/1/20>1d20</a>
-  <a href=/dice/5/4>5d4</a>
-  </navbar>
+
 <h1>5d4</h1>
-<p><%= @output %></p>
+<ul>
+  <%  @rolls.each do |a_roll| %>
+    <li>
+      <%= a_roll %>
+    </li>
+  <% end %>
+</ul>
 </body>
 </html>
