--- a/views/home.erb
+++ b/views/home.erb
@@ -5,20 +5,13 @@
   <title>Dice Roll</title>
 </head>
 <body>
- <navbar>
- <a href="/">Home</a>
-  <a href=/dice/2/6>2d6</a>
-  <a href=/dice/2/10>2d10</a>
-  <a href=/dice/1/20>1d20</a>
-  <a href=/dice/5/4>5d4</a>
-  </navbar>
-
  <h1>Dice Roll</h1>
 <ul>
   <li><a href='/dice/2/6'>Roll two 6-sided dice</a></li>
     <li><a href='/dice/2/10'>Roll two 10-sided dice</a></li>
     <li><a href='/dice/1/20'>Roll one 20-sided die</a></li>
     <li><a href='/dice/5/4'>Roll five 4-sided dice</a></li>
+    <li><a href='/dice/100/6'>Roll one hundred 6-sided dice</a></li>
 </ul>
 </body>
 <html>
